question 1-6 done
