# routes/auth.js
@@ -3,6 +3,9 @@ var router = express.Router();
 const MySql = require("../routes/utils/MySql");
 const DButils = require("../routes/utils/DButils");
 const bcrypt = require("bcrypt");
+const user_utils = require("./utils/user_utils");
+const recipe_utils = require("./utils/recipes_utils");
+
 
 router.post("/Register", async (req, res, next) => {
   try {
@@ -69,8 +72,30 @@ router.post("/Login", async (req, res, next) => {
 });
 
 router.post("/Logout", function (req, res) {
+
   req.session.reset(); // reset the session info --> send cookie when  req.session == undefined!!
   res.send({ success: true, message: "logout succeeded" });
 });
+
+router.get("/Home", async function(req, res){
+  // get 3 random recipes
+
+  let recipes_id_array = []
+  let lastSeenRecipes = []
+  let randomRecipes = await recipe_utils.getRandomRecipes(req.session, 3);
+
+  // if user logged in get his last seen recipes:
+  if(req.session && req.session.user_id)
+  {
+    let user_id = req.session.user_id
+    const recipes_id = await user_utils.getLastWatchedRecipes(user_id, 3);
+    recipes_id.map((element) => recipes_id_array.push(element.recipe_id)); 
+    lastSeenRecipes = await recipe_utils.getRecipesPreview(recipes_id_array, user_id);
+  }
+  
+  const result = randomRecipes.concat(lastSeenRecipes);
+  res.status(200).send(result);
+
+})
 
 module.exports = router;
